RESOLVED FIXED50860
Select menus with short option titles do not paint properly
https://bugs.webkit.org/show_bug.cgi?id=50860
Summary Select menus with short option titles do not paint properly
Jon Honeycutt
Reported 2010-12-10 19:06:18 PST
<select> popup menus paint with a black bar on the right if the <option> element titles are shorter than the <select> is wide. <rdar://problem/8660807>
Attachments
Jon Honeycutt
Comment 1 2010-12-11 04:50:26 PST
Fixed in r73852.
Note You need to log in before you can comment on or make changes to this bug.